--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 body {
-  width: 75%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 60px;
@@ -104,6 +104,15 @@ p {
     color: $state-danger-text;
   }
 }
+
+.modal-dialog-center {
+  padding-top: 15%;
+}
+
+.modal-b {
+  padding: 20px;
+}
+
 
 
 
