--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,20 +2,23 @@
 <div>
   <table class="table table-condensed table-bordered user-table">
     <tr>
-      <td width="400">
+      <td>
         <%= link_to "←", user_path(date: @first_day.prev_month), class: "btn btn-default" %>
         <%= l(@first_day,format: :middle) %> 時間管理表
         <%= link_to "→", user_path(date: @first_day.next_month), class: "btn btn-default"%>
       </td>
-      <td width="250">指定勤務時間<%= format_basic_info(@user.work_time) %></td>
-      <td colspan="3">基本勤務時間<%= format_basic_info(@user.basic_time) %></td>
-      <td width="100">初日<%= l(@first_day,format: :short) %></td>
+      <td>
+        指定勤務開始時間
+        <br>指定勤務終了時間
+      </td>
+      <td colspan="3" class="table-text ">基本時間</td>
+      <td class="table-text">初日<%= l(@first_day,format: :short) %></td>
     </tr>
-    <tr>
+    <tr class="user-table-item">
       <td>所属:<%= @user.department.present? ? @user.department : "未所属" %></td>
       <td>名前:<%= @user.name %></td>
       <td>コード</td>
-      <td></td>
+      <td>202</td>
       <td>出勤日数:<%= @worked_sum %>日</td>
       <td>締め<%= l(@last_day,format: :short) %></td>
     </tr>
@@ -28,6 +31,7 @@
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
     <thead>
       <tr>
+        <th>残業申請</th>
         <th rowspan="2">日付</th>
         <th rowspan="2">曜日</th>
         <th colspan="3">出社</th>
@@ -36,6 +40,7 @@
         <th rowspan="2">備考</th>
       </tr>
       <tr>
+        <th></th>
         <th>時</th>
         <th>分</th>
         <th></th>
@@ -47,6 +52,7 @@
     <tbody>
       <% @attendances.each do |day| %>
         <tr>
+          <td><%= link_to "残業申請", user_attendance_over_time_path(@user,day), remote: true, class: "btn btn-primary" %></td>
           <td><%= l(day.worked_on, format: :short) %></td>
           <td class="text-<%= wday_class(day) %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
           <td><%= l(day.started_at, format: :hour) if day.started_at.present? %></td>
@@ -84,3 +90,5 @@
     </tfoot>
   </table>
 </div>
+
+<div id="over-time" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
