update_over_time　更新のみできる

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,8 +8,8 @@
         <%= link_to "→", user_path(date: @first_day.next_month), class: "btn btn-default"%>
       </td>
       <td>
-        指定勤務開始時間
-        <br>指定勤務終了時間
+        指定勤務開始時間:<%= l(@user.basic_start, format: :time) %>
+        <br>指定勤務終了時間:<%= l(@user.basic_finish, format: :time) %>
       </td>
       <td colspan="3" class="table-text ">基本時間</td>
       <td class="table-text">初日<%= l(@first_day,format: :short) %></td>
@@ -59,7 +59,7 @@
           <td><%= l(day.started_at.floor_to(15.minutes), format: :min) if day.started_at.present? %></td>
           <td>
             <% if btn_text = attendance_state(day) %>
-              <%= link_to "#{btn_text}登録", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
+              <%= link_to "#{btn_text}登録", user_attendance_path(@user,day), method: :patch, class: "btn btn-primary btn-attendance" %>
             <% end %>
           </td>
           <td><%= l(day.finished_at, format: :hour) if day.finished_at.present? %></td>
