--- a/app/views/attendances/_over_time.html.erb
+++ b/app/views/attendances/_over_time.html.erb
@@ -6,7 +6,7 @@
     <div class="modal-body modal-b">
       <div class="row">
         <div class="col-md-10 col-md-offset-1"> 
-          <%= form_with(model: @attendance, url: user_attendance_update_over_time_path(@user,@attendance), local: true, method: :patch ) do |f| %>
+          <%= form_with(model: @user, url: user_attendance_update_over_time_path(@user,@attendance), local: true, method: :patch ) do |f| %>
             <table class="table table-condensed table-hover table-bordered">
               <tr>
                 <th>日付</th>
@@ -16,14 +16,20 @@
                 <th>業務処理内容</th>
                 <th>指示者確認</th>
               </tr>
-              <tr>
-                <td><%= l(@attendance.worked_on, format: :short) %></td>
-                <td><%= $days_of_the_week[@attendance.worked_on.wday] %></td>
-                <td><%= f.time_field :finish_time, class: "form-control" %></td>
-                <td></td>
-                <td><%= text_field :aim, class: "form-control" %></td>
-                <td></td>
-              </tr>
+              <%= fields_for @attendance do |a|%>
+                <tr>
+                  <td><%= l(@attendance.worked_on, format: :short) %></td>
+                  <td><%= $days_of_the_week[@attendance.worked_on.wday] %></td>
+                  <td><%= a.time_field :finish_time, class: "form-control" %></td>
+                  <td>
+                    <%= a.label :next_day, class: "checkbox checkbox-next-day" do %>
+                      <%= a.check_box :next_day %>
+                    <% end %>
+                  </td>
+                  <td><%= a.text_field :aim, class: "form-control" %></td>
+                  <td><%= a.select :instructor, {'上長A':1, '上長B':2}, { include_blank: "選択してください"}, class: "form-control" %></td>
+                </tr>
+              <% end %>
             </table>
             <%= f.submit "変更", class: "btn btn-block btn-primary" %>
           <% end %>
