--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -4,8 +4,11 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, url: update_basic_info_user_path(@user), method: :patch, local: true) do |f| %>
       
-      <%= f.label :basic_time, class: "label-signup" %>
-      <%= f.time_field :basic_time, class: "form-control" %>
+      <%= f.label :basic_start, class: "label-signup" %>
+      <%= f.time_field :basic_start, class: "form-control" %>
+      
+      <%= f.label :basic_finish, class: "label-signup" %>
+      <%= f.time_field :basic_finish, class: "form-control" %>
       
       <%= f.label :work_time, class: "label-signup" %>
       <%= f.time_field :work_time, class: "form-control" %>
