--- a/app/views/users/edit_basic_info.html.erb
+++ b/app/views/users/edit_basic_info.html.erb
@@ -3,6 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_with(model: @user, url: update_basic_info_user_path(@user), method: :patch, local: true) do |f| %>
+      <%= render 'shared/error_message' %>
       
       <%= f.label :basic_start, class: "label-signup" %>
       <%= f.time_field :basic_start, class: "form-control" %>
