--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, @user.name) %>
 <div>
+  <%= render 'shared/error_message' %>
   <table class="table table-condensed table-bordered user-table">
     <tr>
       <td>
@@ -24,6 +25,21 @@
     </tr>
   </table>
   
+    <ul>
+      <% if @user.instructor_user? %>
+          <li>【所属長承認申請のお知らせ】</li>
+          <li>【勤怠変更申請のお知らせ】</li>
+        <% if @over_time.present? %>
+          <li class="text-danger">
+            <%= link_to "【残業申請のお知らせ】", '#', class: "text-danger" %>
+            <span><%= @over_time.count %>件の通知があります。</span>
+          </li>
+        <% else %>
+          <li>【残業申請のお知らせ】</li>
+        <% end %>
+      <% end %>
+    </ul>
+  
   <div class="btn-users-show">
     <%= link_to "一ヶ月の勤怠編集へ", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-info" %>
   </div>
@@ -31,22 +47,31 @@
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
     <thead>
       <tr>
-        <th>残業申請</th>
-        <th rowspan="2">日付</th>
-        <th rowspan="2">曜日</th>
+        <th rowspan="3">残業申請</th>
+        <th rowspan="3">日付</th>
+        <th rowspan="3">曜日</th>
+        <th colspan="8">実績</th>
+        <th colspan="5">所定外勤務</th>
+      </tr>
+      <tr>
         <th colspan="3">出社</th>
         <th colspan="3">退社</th>
         <th rowspan="2">在社時間</th>
         <th rowspan="2">備考</th>
+        <th colspan="2">終了予定時間</th>
+        <th rowspan="2">時間外時間</th>
+        <th rowspan="2">勤務処理内容</th>
+        <th rowspan="2">指示書確認</th>
       </tr>
       <tr>
-        <th></th>
         <th>時</th>
         <th>分</th>
         <th></th>
         <th>時</th>
         <th>分</th>
         <th></th>
+        <th>時</th>
+        <th>分</th>
       </tr>
     </thead>
     <tbody>
@@ -72,20 +97,20 @@
             <% end %>
           </td>
           <td><%= day.note %></td>
+          <td></td>
+          <td></td>
+          <td><%= working_over_time(day,day.finish_time,@user.basic_finish) %></td>
+          <td></td>
+          <td><%= day.instructor_confirmation %></td>
         </tr>
       <% end %>
     </tbody>
     <tfoot>
       <tr>
-        <td colspan="2">累計日数</td>
-        <td colspan="2">総合勤務時間</td>
-        <td colspan="2">累計在社時間</td>
-        <td rowspan="2"></td>
-      </tr>
-      <tr>
-        <td colspan="2"><%= @attendances.count %></td>
-        <td colspan="2"><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
-        <td colspan="2"><%= format("%.2f", @total_working_times.to_f) %></td>
+        <td colspan="9"></td>
+        <td><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
+        <td colspan="5"></td>
+        <td></td>
       </tr>
     </tfoot>
   </table>
