--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -113,7 +113,18 @@ p {
   padding: 20px;
 }
 
+.checkbox-position {
+  margin-left: 32px;
+}
 
+.btn-basic-info {
+  margin: 0 35%;
+  width: 30%;
+}
+
+.btn-approval {
+  margin: 0 25%;
+}
 
 
 
