show レイアウト調整

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -128,3 +128,22 @@ p {
 
 
 
+#table-user {
+  tr {
+    text-align: center;
+    vertical-align: middle;
+  }
+  td {
+    text-align: center;
+    vertical-align: middle;
+  }
+}
+
+.table-user {
+  tr{
+    text-align: center;
+    vertical-align: middle;
+}
+}
+
+
