--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -9,8 +9,10 @@
           <th>曜日</th>
           <th>出勤時間</th>
           <th>退勤時間</th>
+          <th>翌日</th>
           <th>在社時間</th>
           <th>備考</th>
+          <th>指示者確認㊞</th>
         </tr>
       </thead>
       <tbody>
@@ -20,14 +22,24 @@
               <td><%= l(day.worked_on, format: :short) %></td>
               <td><%= $days_of_the_week[day.worked_on.wday] %></td>
               <% if Date.current < day.worked_on %>
-                <td><%= attendance.time_field :started_at, readonly: true, class: "form-control" %></td>
-                <td><%= attendance.time_field :finished_at, readonly: true, class: "form-control" %></td>
+                <td><%= attendance.time_field :started_at_temporary, readonly: true, class: "form-control" %></td>
+                <td><%= attendance.time_field :finished_at_temporary, readonly: true, class: "form-control" %></td>
               <% else %>
-                <td><%= attendance.time_field :started_at, class: "form-control" %></td>
-                <td><%= attendance.time_field :finished_at, class: "form-control" %></td>
+                <td><%= attendance.time_field :started_at_temporary, class: "form-control" %></td>
+                <td><%= attendance.time_field :finished_at_temporary, class: "form-control" %></td>
               <% end %>
-              <td></td>
+              <td>
+                <%= attendance.label :next_day, class: "check_box" do %>
+                  <%= attendance.check_box :next_day %>
+                <% end %>
+              </td>
+              <td>
+                <% if day.started_at.present? && day.finished_at.present? %>
+                  <%= working_times(day.started_at,day.finished_at) %>
+                <% end %>
+              </td>
               <td><%= attendance.text_field :note, class: "form-control" %></td>
+              <td><%= attendance.collection_select :attendance_instructor, @instructor, :name, :name, {include_blank: "選択してください。"}, class: "form-control" %> </td>
             </tr>
           <% end %>
         <% end %>
