--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -97,7 +97,11 @@
                 <% @total_working_times = @total_working_times.to_f + stf_times.to_f %>
               <% end %>
             </td>
-            <td><%= day.note %></td>
+            <td>
+              <% if day.attendance_confirmation == "承認" %>
+                <%= day.note %>
+              <% end %>
+            </td>
             <td></td>
             <td></td>
             <td>
@@ -105,7 +109,11 @@
                 <%= working_over_time(day,day.finish_time,@user.basic_finish) %>
               <% end %>
             </td>
-            <td></td>
+            <td>
+              <% if day.attendance_confirmation.present? %>
+                <%= day.attendance_confirmation %>
+              <% end %>
+            </td>
             <td>
               <% if day.instructor_confirmation.present? %>
                 <%= day.instructor %>
@@ -209,8 +217,8 @@
             <td></td>
             <td><%= l(day.worked_on, format: :short) %></td>
             <td class="text-<%= wday_class(day) %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
-            <td><%= l(day.started_at, format: :hour) if day.started_at.present? %></td>
-            <td><%= l(day.started_at.floor_to(15.minutes), format: :min) if day.started_at.present? %></td>
+            <td><%= l(day.started_at_temporary, format: :hour) if day.started_at_temporary.present? %></td>
+            <td><%= l(day.started_at_temporary.floor_to(15.minutes), format: :min) if day.started_at_temporary.present? %></td>
             <td>
             </td>
             <td><%= l(day.finished_at, format: :hour) if day.finished_at.present? %></td>
@@ -224,7 +232,8 @@
             </td>
             <td><%= day.note %></td>
             <td></td>
-            <td></td>
+            <td>
+            </td>
             <td>
               <% if day.instructor_confirmation == "承認" %>
                 <%= working_over_time(day,day.finish_time,@user.basic_finish) %>
