Attendance_Application いったん完了

--- a/app/views/attendances/_over_time_approval.html.erb
+++ b/app/views/attendances/_over_time_approval.html.erb
@@ -28,9 +28,9 @@
                          <td class="text-<%= wday_class(day) %>"><%= $days_of_the_week[day.worked_on.wday] %></td>
                          <td class="table-text"><%= l(day.finish_time,format: :time) %></td>
                          <td class="table-text"><%= l(User.find(id).basic_finish, format: :time) %></td>
-                         <td></td>
-                         <td></td>
-                         <td class="botton dropdown"><%= a.select :instructor_confirmation, ['申請中', '否認', '承認', 'なし'],{include_blank: true}, class: "form-control" %></td>
+                         <td><%= working_over_time(day,day.finish_time,User.find(id).basic_finish) %></td>
+                         <td><%= day.aim %></td>
+                         <td><%= a.select :instructor_confirmation, ['申請中', '否認', '承認', 'なし'],{include: "選択してください"}, class: "form-control" %></td>
                          <td>
                            <%= a.label :change, class: "checkbox checkbox-position" do %>
                              <%= a.check_box :change %>
