user一覧ページ jquery導入仕掛け

--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -3,4 +3,7 @@
   <h1>勤怠管理システム</h1>
   <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
   <p>アカウント作成は<%= link_to "こちらから", new_user_path %></p>
+  <p id="hoge">赤になる</p>
+  
+  
 </div>
