--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -146,4 +146,18 @@ p {
 }
 }
 
+.users-list {
+  background-color: #EEE;
+  height: 100px;
+}
+
+.btn-edit {
+  margin-top: 20px;
+  width: 100px;
+  height: 50px;
+}
+
+// .acdn-content {
+//   display: none;
+// }
 
