edit.html.erb 消す前

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: @user, local: true) do |f| %>
-   <%= render 'shared/error_message' %>
+   <%= render partial: 'shared/error_message', locals: { obg: @user } %>
     
    <%= f.label :name, class: "label-#{yield(:class_text)}" %>
    <%= f.text_field :name, class: "form-control" %>
