--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,40 @@
 <% provide(:title, "ユーザー一覧ページ") %>
 <% provide(:button, "編集") %>
 <h1>ユーザー一覧</h1>
-<div class="text-right">
-  <%= form_tag(users_path,method: :get) do %>
-    <%= text_field_tag :search %>
-    <%= submit_tag "検索" %>
+  <%= form_with(model: @user, url: user_path(@user), method: :patch, local: true ) do |f| %>
+     <%= f.label :name, class: "label-#{yield(:class_text)}" %>
+     <%= f.text_field :name, class: "form-control" %>
+        
+     <%= f.label :email, class: "label-#{yield(:class_text)}" %>
+     <%= f.email_field :email, class: "form-control" %>
+     
+     <%= f.label :department, class: "label-#{yield(:class_text)}" %>
+     <%= f.text_field :department, class: "form-control" %>
+        
+     <%= f.label :password, class: "label-#{yield(:class_text)}" %>
+     <%= f.password_field :password, class: "form-control" %>
+        
+     <%= f.label :password_confirmation, class: "label-#{yield(:class_text)}" %>
+     <%= f.password_field :password_confirmation, class: "form-control" %>
+        
+     <%= f.submit yield(:button), class: "btn btn-block btn-primary btn-signup" %>
   <% end %>
-</div>
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <%= will_paginate %>
     <table class="table table-condensed ">
       <tbody>
-        <% @users.each.with_index(1) do |user, i| %>
+        <% @users.each.with_index(0) do |user, i| %>
           <div>
             <p><%= user.name %></p>
             <%= link_to "削除", user_path(user), method: :delete, class: "btn btn-primary" %>
             <div class="users-list">
-              <a class="btn btn-primary btn-lg btn-edit" data-toggle="collapse"  href="#collapseExample<%= "#{i}" %>" role="button" aria-expanded="false" aria-controls="collapseExample<%= "#{i}" %>">
+              <a class="btn btn-primary btn-lg btn-edit" data-toggle="collapse"  href="#collapseExample<%= "#{i}" %>" >
                 編集
               </a>
             </div>
             <div class="row collapse" id="collapseExample<%= "#{i}" %>">
               <div class="col-md-10">
-                <%= form_with(model: user, url: user_path(user), local: true, method: :patch) do |f| %>
+                <%= form_with(model: user, url: user_path(user.id), local: true, method: :patch ) do |f| %>
                     
                    <%= f.label :name, class: "label-#{yield(:class_text)}" %>
                    <%= f.text_field :name, class: "form-control" %>
@@ -48,6 +59,5 @@
         <% end %>
       </tbody>
     </table>
-    <%= will_paginate %>
   </div>
 </div>
