--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li><%= link_to "トップ", root_path %></li>
           <% if @current_user.admin? %>
             <li><%= link_to "ユーザー一覧", users_path(page: params[:page]) %></li>
-            <li><%= link_to "出勤社員一覧", '#' %></li>
+            <li><%= link_to "出勤社員一覧", working_index_users_path %></li>
             <li><%= link_to "拠点情報の修正", '#' %></li>
             <li><%= link_to "基本情報の修正", '#' %></li>
           <% end %>
