--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to "トップ", root_path %></li>
+          <li><%= link_to "勤怠ログ", attendances_attendance_log_user_path(current_user) %></li>
           <% if @current_user.admin? %>
             <li><%= link_to "ユーザー一覧", users_path(page: params[:page]) %></li>
             <li><%= link_to "出勤社員一覧", working_index_users_path %></li>
