--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @user, local: true) do |f| %>
+<%= form_with model: @user, local: true do |f| %>
    <%= render 'shared/error_message' %>
     
    <%= f.label :name, class: "label-#{yield(:class_text)}" %>
