--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -146,8 +146,11 @@
           <td><%= format_basic_info(@user.work_time).to_f * @worked_sum %></td>
           <td colspan="5"></td>
           <td>
-            <%= form_with model: @one_month_attendance, url: attendances_update_one_month_user_path(current_user), local: true, method: :patch do |f| %>
-              <%= f.collection_select(:one_month_instructor, @one_month_instructor, :name, :name, {class: "form-control"}) %>
+            <% if @this_month_attendance.present? %>
+              <%= @this_month_attendance.one_month_confirmation %>
+            <% end %>
+            <%= form_with(model: @one_month_attendance, url: user_months_path(current_user, data: @first_day), local: true, method: :post) do |f| %>
+              <%= f.collection_select(:one_month_instructor, @one_month_instructor, :name, :name, {}, {class: "form-control"}) %>
               <br>
               <%= f.submit "申請", class: "btn btn-primary" %>
             <% end %>
