--- a/app/assets/stylesheets/months.scss
+++ b/app/assets/stylesheets/months.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the Months controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.btn-one-month {
+  width: 500px;
+  margin-left: 100px;
+  margin-top: 30px;
+}
