--- a/app/views/attendances/_over_time_approval.html.erb
+++ b/app/views/attendances/_over_time_approval.html.erb
@@ -30,7 +30,7 @@
                          <td class="table-text"><%= l(User.find(id).basic_finish, format: :time) %></td>
                          <td><%= working_over_time(day,day.finish_time,User.find(id).basic_finish) %></td>
                          <td><%= day.aim %></td>
-                         <td><%= a.select :instructor_confirmation, ['申請中', '否認', '承認', 'なし'],{include: "選択してください"}, class: "form-control" %></td>
+                         <td><%= a.select :instructor_confirmation, $confirmation,{include: "選択してください"}, class: "form-control" %></td>
                          <td>
                            <%= a.label :change, class: "checkbox checkbox-position" do %>
                              <%= a.check_box :change %>
