--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,10 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to "トップ", root_path %></li>
-          <li><%= link_to "勤怠ログ", attendances_attendance_log_user_path(current_user) %></li>
           <% if @current_user.admin? %>
             <li><%= link_to "ユーザー一覧", users_path(page: params[:page]) %></li>
             <li><%= link_to "出勤社員一覧", working_index_users_path %></li>
-            <li><%= link_to "拠点情報の修正", '#' %></li>
+            <li><%= link_to "拠点情報の修正", bases_path %></li>
             <li><%= link_to "基本情報の修正", '#' %></li>
           <% end %>
           <li class="dropdown">
@@ -18,6 +17,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to @current_user.name, user_path(current_user) %></li>
+              <li><%= link_to "勤怠ログ", attendances_attendance_log_user_path(current_user) %></li>
               <li><%= link_to "編集", edit_user_path(current_user) %></li>
               <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
             </ul>
