--- a/app/views/attendances/attendance_log.html.erb
+++ b/app/views/attendances/attendance_log.html.erb
@@ -26,7 +26,7 @@
         <% @logs.each do |log| %>
           <tbody>
             <tr>
-              <td><%= l(log.worked_on, format: :short) %></td>
+              <td><%= l(log.log_worked_on, format: :short) %></td>
               <td>
                 <% if log.before_started.present? %>
                   <%= l(log.before_started, format: :time) %>
